# IDSMS

./: .gitignore  Driving_School_System_Features_Kenya.docx  README.md  backend_logs.txt  db_status.txt  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  check_alembic_version.py  check_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py  test_auth.py  verify_db.py
backend/alembic/: env.py
backend/alembic/versions/: 05cd1481a36d_add_assessment_table.py  15a1bcffee82_add_profile_fields.py  15ae9fa2ed3d_init.py  39f75123755d_add_settings_table.py  3e7057210dbd_add_document_table.py  9c873cfcb3dd_add_timestamps_soft_delete_and_security_.py  bd7207b74794_add_settings_table.py  d025997d1c95_add_kenyan_features_and_curriculum.py
backend/app/: main.py
backend/app/api/: analytics.py  api.py  assessments.py  auth.py  courses.py  curriculum.py  deps.py  instructor.py  lessons.py  onboarding.py  payments.py  settings.py  users.py  vehicles.py
backend/app/core/: config.py  db.py  security.py
backend/app/email_templates/: lesson_reminder.html  password_reset.html  payment_receipt.html  welcome.html
backend/app/middleware/: error_handler.py  rate_limit.py
backend/app/models/: __init__.py  assessment.py  audit_log.py  base.py  course.py  curriculum.py  document.py  lesson.py  payment.py  profile.py  settings.py  token_blacklist.py  user.py  vehicle.py
backend/app/schemas/: analytics.py  settings.py  token.py
backend/app/services/: mpesa.py
backend/app/utils/: email.py  file_storage.py  logger.py
backend/app/validators/: __init__.py  assessment_validator.py  payment_validator.py  schedule_validator.py  user_validator.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DashboardCharts.jsx  DashboardSkeleton.jsx  ErrorBoundary.jsx  FileUpload.jsx  PaymentModal.jsx  ProtectedRoute.jsx  RoleProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx  (+1 more)
(+37 files in other folders)
